style: layout fixes for project pages on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,3 +65,15 @@ body {
     opacity: 1;
   }
 }
+
+.project-page-h2 {
+  width: 100%;
+  text-align: center;
+  font-size: 2.25rem /* 36px */;
+  line-height: 2.5rem /* 40px */;
+  padding-top: 2.5rem /* 40px */;
+  padding-bottom: 1.25rem;
+  text-decoration-line: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 4px;
+}
